--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "./lib/index.js",
   "exports": "./server.js",
+  "type": "module",
+  "target": "esnext",
+  "module": "commonjs",
   "dependencies": {
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
@@ -16,10 +19,9 @@
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^3.0.0"
   },
-  "type": "module",
   "devDependencies": {},
   "scripts": {
-    "start": "node server.js",
+    "start": "node --experimental-modules --inspect server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matilda & Maria",
