--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "mobx": "^6.3.6",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.33"
+    "@types/react": "^17.0.33",
+    "@types/react-router-dom": "^5.3.2"
   }
 }
