--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^9.4.0",
     "mobx": "^6.3.6",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
