--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "@typescript-eslint/no-unused-expressions": "off"
+}
   },
   "browserslist": {
     "production": [
