--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
+    "@types/react-big-calendar": "^0.36.2",
     "@types/react-router-dom": "^5.3.2"
   }
 }
