--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-big-calendar": "^0.38.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-native-calendars": "^1.1269.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -48,7 +49,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "@types/react": "^17.0.34",
+    "@types/react-big-calendar": "^0.36.2",
     "@types/react-router-dom": "^5.3.2"
   }
 }
