--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "npm": "8.x"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
     "date-fns": "^2.26.0",
     "firebase": "^9.4.1",
     "node-sass": "^6.0.1",
@@ -22,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set HTTPS=true&&react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
