Added icons to the manifest file

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,28 +3,23 @@
   "name": "Activity Today",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "192x192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo.png",
+      "src": "256x256.png",
       "type": "image/png",
       "sizes": "256x256"
     },
     {
-      "src": "logo.png",
+      "src": "384x384.png",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "logo.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }, 
-    {
-      "purpose": "any maskable",
-      "src": "logo.png",
+      "src": "512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
