--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "date-fns": "^2.26.0",
     "firebase": "^9.4.1",
+    "https-localhost": "^4.7.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-big-calendar": "^0.38.1",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set HTTPS=true&&react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
