--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
       "react-app"
     ],
     "rules": {
-      "@typescript-eslint/no-unused-expressions": "off"
+      "@typescript-eslint/no-unused-expressions": "off",
+      "@typescript-eslint/react-hooks": "off"
     }
   },
   "browserslist": {
