--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
   },
   "dependencies": {
     "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "date-fns": "^2.26.0",
     "firebase": "^9.4.1",
     "https-localhost": "^4.7.0",
+    "lodash.throttle": "^4.1.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
-    "react-big-calendar": "^0.38.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-native-calendars": "^1.1269.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -55,7 +56,6 @@
     "@babel/plugin-syntax-jsx": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@types/react": "^17.0.34",
-    "@types/react-big-calendar": "^0.36.2",
     "@types/react-router-dom": "^5.3.2"
   }
 }
