--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash.throttle": "^4.1.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-cookie-consent": "^6.4.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-places-autocomplete": "^7.3.0",
